--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,9 @@ dependencies {
     //Glide library (images)
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //For Firebase storage
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+
+
 }
